--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0D4C92;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,63 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
+}
+
+.profilePhoto{
+
+  width: auto;
+  height: 300px;
+  border-radius: 60px;
+}
+
+.aboutMe{
+
+
+  background-color:#59C1BD;
+  border-radius: 60px;
+  margin-left: 10%;
+  margin-right: 10%;
+  max-width: 80%;
+
+}
+
+.keySkills{
+
+
+  background-color:#85bea9;
+  border-radius: 60px;
+  margin-left: 10%;
+  margin-right: 10%;
+  min-width: 80%;
+  
+  
+  
+
+}
+
+.dev{
+
+
+  background-color: #87a097;
+  border-radius: 60px;
+  margin-left: 10%;
+  margin-right: 10%;
+  min-width: 80%;
+
+  
+  
+
+}
+
+.contactIcon{
+
+
+  height: 5%;
+  width: 5%;
+  margin-left: 1%;
+  margin-right: 1%;
+
 }
 
 .App-link {
