--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
+
 
 .App-header {
   background-color: #0D4C92;
@@ -81,15 +74,11 @@
 
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 992px) {
+.contactIcon{height: 10%;
+  width: 10%;
+  margin-left: 1%;
+  margin-right: 1%;}
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
