Backgrounf Colour Changed

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 
 .App-header {
-  background-color: #0D4C92;
+  background-color: #17a6a1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
