--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
   width: auto;
   height: 300px;
   border-radius: 60px;
+  filter: drop-shadow(1px -2px 10px #ffffff);
 }
 
 .aboutMe{
@@ -33,8 +34,16 @@
   margin-left: 10%;
   margin-right: 10%;
   max-width: 80%;
+  transition: .8s ease;
 
 }
+
+.aboutMe:hover{
+  filter: drop-shadow(1px -2px 10px #33f3b3);
+
+  transition: .8s ease;
+}
+
 
 .keySkills{
 
@@ -46,8 +55,13 @@
   min-width: 80%;
   
   
-  
+  transition: .8s ease;
 
+}
+.keySkills:hover{
+  filter: drop-shadow(1px -2px 10px #33f3b3);
+
+  transition: .8s ease;
 }
 
 .dev{
@@ -59,9 +73,15 @@
   margin-right: 10%;
   min-width: 80%;
 
-  
+  transition: .8s ease;
   
 
+}
+
+.dev:hover{
+  filter: drop-shadow(1px -2px 10px #33f3b3);
+
+  transition: .8s ease;
 }
 
 .contactIcon{
@@ -71,8 +91,15 @@
   width: 5%;
   margin-left: 1%;
   margin-right: 1%;
+  transition: .8s ease;
 
 }
+
+.contactIcon:hover{
+  filter: drop-shadow(1px -2px 10px #000000);
+
+  transition: .8s ease;
+  }
 
 @media screen and (max-width: 992px) {
 .contactIcon{height: 10%;
