--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   width: auto;
   height: 300px;
   border-radius: 60px;
-  filter: drop-shadow(1px -2px 10px #ffffff);
+  /*filter: drop-shadow(1px -2px 10px #ffffff);*/
 }
 
 .aboutMe{
@@ -39,7 +39,7 @@
 }
 
 .aboutMe:hover{
-  filter: drop-shadow(1px -2px 10px #33f3b3);
+  filter: drop-shadow(1px -2px 10px #59C1BD);
 
   transition: .8s ease;
 }
@@ -59,7 +59,7 @@
 
 }
 .keySkills:hover{
-  filter: drop-shadow(1px -2px 10px #33f3b3);
+  filter: drop-shadow(1px -2px 10px #85bea9);
 
   transition: .8s ease;
 }
@@ -79,7 +79,7 @@
 }
 
 .dev:hover{
-  filter: drop-shadow(1px -2px 10px #33f3b3);
+  filter: drop-shadow(1px -2px 10px  #87a097);
 
   transition: .8s ease;
 }
